--- a/discount.html
+++ b/discount.html
@@ -1,7 +1,7 @@
 <h1><p>Дисконт</p></h1>
 
 <p>
-  <img src="discount1.jpg" width="250" height="200"> s 
+  <img src="discount1.jpg" width="250" height="200">  
 </p>
 
 <p>
@@ -19,4 +19,9 @@
     скидки предоставляются для того, чтобы позволить продавцу увеличить объём продаж и, 
     следовательно, достичь экономии от масштаба, или используются, как уловка, чтобы 
     заручиться «верностью» клиента, или предоставляются по требованию крупного и влиятельного покупателя.
+</p>
+
+<p>
+<img src="discount2.jpg" width="45%">
+<img src="discount3.jpg" width="45%"s>
 </p>
