--- a/discount.html
+++ b/discount.html
@@ -1,27 +1,37 @@
-<h1><p>Дисконт</p></h1>
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <title>Барашкова Светлана Константиновнаю Дисконт</title>
+    </head>
 
-<p>
-  <img src="discount1.jpg" width="250" height="200">  
-</p>
+    <body>
+        <h1><p>Дисконт</p></h1>
 
-<p>
-    <b>Дисконт</b> (англ. <i>discount</i>) — <b>экономический термин</b>, в буквальном переводе 
-    с английского означает <i>скидка</i>, вычет, <i>разница</i> [1]. В зависимости от 
-    <b>контекста</b>, может принимать различные решения.
-</p>
+        <p>
+        <img src="discount1.jpg" width="250" height="200">  
+        </p>
 
-<h2><p>Дисконт на товарном рынке</p></h2>
+        <p>
+            <b>Дисконт</b> (англ. <i>discount</i>) — <b>экономический термин</b>, в буквальном переводе 
+            с английского означает <i>скидка</i>, вычет, <i>разница</i> [1]. В зависимости от 
+            <b>контекста</b>, может принимать различные решения.
+        </p>
 
-<p>
-    Скидка с объявленной прейскурантной цены товара или услуги, предоставляемая продавцом 
-    потребителю во время распродажи[1]. Скидка может быть предложена при незамедлительной 
-    оплате наличными (наличная скидка) либо при оптовой закупке (торговая скидка). Торговые 
-    скидки предоставляются для того, чтобы позволить продавцу увеличить объём продаж и, 
-    следовательно, достичь экономии от масштаба, или используются, как уловка, чтобы 
-    заручиться «верностью» клиента, или предоставляются по требованию крупного и влиятельного покупателя.
-</p>
+        <h2><p>Дисконт на товарном рынке</p></h2>
 
-<p>
-<img src="discount2.jpg" width="45%">
-<img src="discount3.jpg" width="45%"s>
-</p>
+        <p>
+            Скидка с объявленной прейскурантной цены товара или услуги, предоставляемая продавцом 
+            потребителю во время распродажи[1]. Скидка может быть предложена при незамедлительной 
+            оплате наличными (наличная скидка) либо при оптовой закупке (торговая скидка). Торговые 
+            скидки предоставляются для того, чтобы позволить продавцу увеличить объём продаж и, 
+            следовательно, достичь экономии от масштаба, или используются, как уловка, чтобы 
+            заручиться «верностью» клиента, или предоставляются по требованию крупного и влиятельного покупателя.
+        </p>
+
+        <p>
+        <img src="discount2.jpg" width="45%">
+        <img src="discount3.jpg" width="45%"s>
+        </p>
+    </body>
+</html>
