--- a/lab_1/discount.html
+++ b/lab_1/discount.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Барашкова Светлана Константиновнаю Дисконт</title>
+        <title>Барашкова Светлана Константиновна. Дисконт</title>
     </head>
 
     <body>
@@ -14,7 +14,7 @@
 
         <p>
             <b>Дисконт</b> (англ. <i>discount</i>) — <b>экономический термин</b>, в буквальном переводе 
-            с английского означает <i>скидка</i>, вычет, <i>разница</i><sup>[1]</sup>. В зависимости от 
+            с английского означает <i>скидка</i>, вычет, <i>разница</i><sup>[1]</sup>. В зависимости от
             <b>контекста</b>, может принимать различные решения.
         </p>
 
@@ -22,7 +22,7 @@
 
         <p>
             <i>Скидка</i> с объявленной прейскурантной <u><i><b>цены</b></i></u> товара или услуги, предоставляемая продавцом 
-            потребителю во время распродажи<sup>[1]</sup>. <i>Скидка</i> может быть предложена при незамедлительной 
+            потребителю во время распродажи<sup>[1]</sup>.<i>Скидка</i> может быть предложена при незамедлительной 
             оплате наличными (наличная <i>скидка</i>) либо при оптовой закупке (торговая <i>скидка</i>). Торговые 
             <i>скидки</i> предоставляются для того, чтобы позволить продавцу увеличить объём продаж и, 
             следовательно, достичь экономии от масштаба, или используются, как уловка, чтобы 
@@ -30,24 +30,24 @@
         </p>
 
         <p>
-        <img src="discount2.jpg" width="45%">
+        <img src="discount2.jpg" width="50%">
         <img src="discount3.jpg" width="45%"s>
         </p>
 
         <h2><p>Дисконт как учёт векселей</p></h2>
-            <p>
-                Учёт <s>векселей</s>, также называемый <b>дисконтом</b>, — это покупка переводных <s>векселей</s>, казначейских <s>векселей</s> или 
-                облигаций по <u><i><b>цене</b></i></u> ниже номинальной. <s>Векселя</s> и облигации погашаются в определённый момент в будущем по своей 
-                номинальной стоимости. Покупатель, который приобретает <s>вексель</s> или облигацию в момент выпуска, платит за них 
-                меньше номинальной, или лицевой, стоимости (с <b>дисконтом</b>). Разница (<b>дисконт</b>) между <u><i><b>ценой</b></i></u>, по которой он покупает
-                <s>вексель</s> или облигацию, и их номинальной стоимостью представляет собой <u>процент</u> по займу, предоставленному под 
-                обеспечение <s>векселем</s> или облигацией. Если владелец <s>векселя</s> или облигации захочет затем продать их до истечения 
-                срока их действия (редисконтировать, переучесть их), он сможет получить за них сумму, меньшую, чем номинальная 
-                стоимость, хотя и бо́льшую, чем та, что была за них заплачена. Разница между исходной <u><i><b>ценой</b></i></u>, заплаченной им, и 
-                полученной суммой зависит главным образом от того, сколько времени осталось до истечения срока действия данной 
-                ценной бумаги. Например, если облигация с номинальной стоимостью 1000 и сроком действия один год была приобретена 
-                за 900, то <b>дисконт</b> по стоимости погашения соответствует <u>процентной</u> ставке: (1000-900)/900=11,1% по займу.
-            </p>
+        <p>
+            Учёт <s>векселей</s>, также называемый <b>дисконтом</b>, — это покупка переводных <s>векселей</s>, казначейских <s>векселей</s> или 
+            облигаций по <u><i><b>цене</b></i></u> ниже номинальной. <s>Векселя</s> и облигации погашаются в определённый момент в будущем по своей 
+            номинальной стоимости. Покупатель, который приобретает <s>вексель</s> или облигацию в момент выпуска, платит за них 
+            меньше номинальной, или лицевой, стоимости (с <b>дисконтом</b>). Разница (<b>дисконт</b>) между <u><i><b>ценой</b></i></u>, по которой он покупает
+            <s>вексель</s> или облигацию, и их номинальной стоимостью представляет собой <u>процент</u> по займу, предоставленному под 
+            обеспечение <s>векселем</s> или облигацией. Если владелец <s>векселя</s> или облигации захочет затем продать их до истечения 
+            срока их действия (редисконтировать, переучесть их), он сможет получить за них сумму, меньшую, чем номинальная 
+            стоимость, хотя и бо́льшую, чем та, что была за них заплачена. Разница между исходной <u><i><b>ценой</b></i></u>, заплаченной им, и 
+            полученной суммой зависит главным образом от того, сколько времени осталось до истечения срока действия данной 
+            ценной бумаги. Например, если облигация с номинальной стоимостью 1000 и сроком действия один год была приобретена 
+            за 900, то <b>дисконт</b> по стоимости погашения соответствует <u>процентной</u> ставке: (1000-900)/900=11,1% по займу.
+        </p>
         <h2><p>Дисконт на валютном рынке</p></h2>
             <p>
                 <b>Дисконтом</b> на валютном рынке называют <i>скидку</i> (вычет) с курса валюты по наличным, кассовым операциям, 
