--- a/lab_2/usb.html
+++ b/lab_2/usb.html
@@ -29,6 +29,38 @@
                 простой и удобный дубликатор USB &ndash; лучший компаньон для любого бизнеса. Также продаем дубликаторы для копирования 
                 внешних жестких дисков.
             </div>
+
+            <h2>Преимущества</h2>
+            <ol>
+                <li>Простое управление</li>
+                <li>Поддержка любого типа флеш носителей и USB жестких дисков</li>
+                    <ul>
+                        <li>USB 2.0</li>
+                        <li>USB 3.0</li>
+                        <li>USB 3.1</li>
+                        <li>Micro USB</li>
+                        <li>Wi-Fi флешки</li>
+                    </ul>
+                <li>Различные режимы копирования</li>
+                    <ul>
+                        <li>синхронный режим</li>
+                        <li>асинхронный режим</li>
+                    </ul>
+                <li>Не требуется время для загрузки и остывания</li>
+                <li>Высокая скорость копирования - 2 Гб/мин</li>
+            </ol>
+            <div>А также:</div>
+            <ol start="6">
+                <li>Автономная система под ключ, компьютер не требуется</li>
+                <li>Копирование и сравнение с оригиналом, что исключает ошибки</li>
+                <li>ЖК-дисплей с отображением всего, что в данный момент делает дубликато</li>
+            </ol>
+            <div>И еще:</div>
+            <ol start="9">
+                <li>Универсальность</li>
+                <li>Доступность</li>
+                <li>Упрощает и ускоряет процесс</li>
+            </ol>
         </main>
 
         <footer>
