--- a/lab_2/usb.html
+++ b/lab_2/usb.html
@@ -5,7 +5,7 @@
         <title>"Барашкова Светлана Консантиновна. Текст о дубликаторах USB"</title>
     </head>
 
-    <body>
+    <body style="background-color: rgb(241, 206, 212); color: palevioletred; font-family: Arial;">
         <header>
             НГТУ, ФБ, Лабраторная работа 2
             <hr>
