--- a/lab_2/usb.html
+++ b/lab_2/usb.html
@@ -5,10 +5,9 @@
         <title>"Барашкова Светлана Консантиновна. Текст о дубликаторах USB"</title>
     </head>
 
-    <body style="background-color: rgb(241, 206, 212); color: palevioletred; font-family: Arial;">
-        <header>
+    <body style="background-color: rgb(241, 206, 212); color: palevioletred; font-family: Arial; margin: 0px;">
+        <header style="background-color: rgb(253, 236, 239); color: rgba(131, 47, 75, 0.878); padding: 15px; font-size: 16pt;">
             НГТУ, ФБ, Лабраторная работа 2
-            <hr>
         </header>
 
         <main>
