--- a/lab_2/usb.html
+++ b/lab_2/usb.html
@@ -173,8 +173,7 @@
             </table>
         </main>
 
-        <footer>
-            <hr>
+        <footer style="background-color: rgb(253, 236, 239); color: rgba(131, 47, 75, 0.878); padding: 15px; font-size: 12pt; font-style: italic; text-align: right;">
             &copy; Барашкова Светлана, ФБИ-22, 2 курс, 2024
         </footer>
     </body>
