--- a/lab_2/usb.html
+++ b/lab_2/usb.html
@@ -22,7 +22,11 @@
                 фирмы или какую-либо другую информацию хранящуюся на флэш-накопителе. Если вам надо сделать 1 или 2 копии, это можно 
                 будет сделать и на обычном компьютере, но если вам необходимо сделать таких копий 3 и более &ndash; например 40 &ndash; это уже 
                 проблематично для ПК, а вот специальный дубликатор USB или дубликатор флэшек &ndash; запросто справится с этой работой, причем 
-                за очень небольшое время. Копирование флешек на USB-дубликаторе &ndash; это удобно и быстро. Процесс копирования флэшек или USB 
+                за очень небольшое время. Копирование флешек на USB-дубликаторе &ndash; это удобно и быстро. 
+            </div>
+            
+            <div>
+                Процесс копирования флэшек или USB 
                 жестких дисков происходит асинхронно. Дубликатор USB управляется с помощью контроллера, на котором всего 4 кнопки. 
                 Высокоскоростное копирование и наличие функцией Compare (сверка с оригиналом), гарантирует успешность копии. Надежный, 
                 простой и удобный дубликатор USB &ndash; лучший компаньон для любого бизнеса. Также продаем дубликаторы для копирования 
@@ -64,10 +68,10 @@
             <h2>USB-дубликаторы для флешек</h2>
 
             <table border="1" width="100%">
-                <tr>
+                <tr style="font-weight: bold;">
                     <td colspan="4">USB-дубликаторы серии Super-Tower</td>
                 </tr>
-                <tr>
+                <tr style="font-weight: bold;">
                     <td>Модель</td>
                     <td>Количество портов</td>
                     <td>Цена, руб.</td>
@@ -117,13 +121,13 @@
             <h2>USB-дубликаторы для жёстких дисков</h2>
             
             <table border="1" width="100%"> 
-                <tr>
+                <tr style="font-weight: bold;">
                     <td colspan="4">
                         USB-дубликаторы Intelligent Series
                         <br><i>с поддержкой внешних жестких дисков USB!</i>
                     </td>
                 </tr>
-                <tr>
+                <tr style="font-weight: bold;">
                     <td>Модель</td>
                     <td>Количество жестких дисков</td>
                     <td>Цена, руб.</td>
