--- a/lab_2/usb.html
+++ b/lab_2/usb.html
@@ -10,27 +10,26 @@
             НГТУ, ФБ, Лабраторная работа 2
         </header>
 
-        <main>
+        <main style="margin: 40px;">
             <h1>Дубликатор USB, дубликатор FLASH</h1>
 
             <h2>Общая информация</h2>
 
-            <div>
-                Дубликатор USB, дубликатор флэш-карт или дубликатор flash &ndash; это очень интересная и полезная вещь, предназначенная для
-                копирования флешек. Все больше людей используют флэшки &ndash; они компактны и не занимают так много места как обычные cd/dvd
-                диски, а информации туда влезает гораздо больше. Представьте себе, что вам необходимо скопировать презентацию вашей
-                фирмы или какую-либо другую информацию хранящуюся на флэш-накопителе. Если вам надо сделать 1 или 2 копии, это можно 
-                будет сделать и на обычном компьютере, но если вам необходимо сделать таких копий 3 и более &ndash; например 40 &ndash; это уже 
-                проблематично для ПК, а вот специальный дубликатор USB или дубликатор флэшек &ndash; запросто справится с этой работой, причем 
-                за очень небольшое время. Копирование флешек на USB-дубликаторе &ndash; это удобно и быстро. 
+            <div align="justify">
+                Дубликатор USB, дубликатор флэш-карт или дубликатор flash &ndash; это очень интересная и полезная вещь, предназначенная
+                для копирования флешек. Все больше людей используют флэшки &ndash; они компактны и не занимают так много места как обычные
+                cd/dvd диски, а информации туда влезает гораздо больше. Представьте себе, что вам необходимо скопировать презентацию вашей
+                фирмы или какую-либо другую информацию хранящуюся на флэш-накопителе. Если вам надо сделать 1 или 2 копии, это можно будет 
+                сделать и на обычном компьютере, но если вам необходимо сделать таких копий 3 и более &ndash; например 40 &ndash; это уже 
+                проблематично для ПК, а вот специальный дубликатор USB или дубликатор флэшек &ndash; запросто справится с этой работой, 
+                причем за очень небольшое время. Копирование флешек на USB-дубликаторе &ndash; это удобно и быстро. 
             </div>
             
-            <div>
-                Процесс копирования флэшек или USB 
-                жестких дисков происходит асинхронно. Дубликатор USB управляется с помощью контроллера, на котором всего 4 кнопки. 
-                Высокоскоростное копирование и наличие функцией Compare (сверка с оригиналом), гарантирует успешность копии. Надежный, 
-                простой и удобный дубликатор USB &ndash; лучший компаньон для любого бизнеса. Также продаем дубликаторы для копирования 
-                внешних жестких дисков.
+            <div align="justify">
+                Процесс копирования флэшек или USB жестких дисков происходит асинхронно. Дубликатор USB управляется с помощью контроллера, 
+                на котором всего 4 кнопки. Высокоскоростное копирование и наличие функцией <span title="патентованная технология!" style="background-color: palevioletred; color: white; padding: 3px; border-radius: 5px;">Compare</span> (сверка с оригиналом), гарантирует 
+                успешность копии. Надежный, простой и удобный дубликатор USB &ndash; лучший компаньон для любого бизнеса. Также продаем 
+                дубликаторы для копирования внешних жестких дисков.
             </div>
 
             <h2>Преимущества</h2>
