--- a/lab_2/usb.html
+++ b/lab_2/usb.html
@@ -67,7 +67,7 @@
             <h2>USB-дубликаторы для флешек</h2>
 
             <table border="1" width="100%">
-                <tr style="font-weight: bold;">
+                <tr style="font-weight: bold; text-align: center;">
                     <td colspan="4">USB-дубликаторы серии Super-Tower</td>
                 </tr>
                 <tr style="font-weight: bold;">
@@ -79,19 +79,19 @@
                 <tr>
                     <td>USB-3 (UB300)</td>
                     <td>3</td>
-                    <td>50000</td>
+                    <td>50&nbsp;000</td>
                     <td rowspan="2">В наличии</td>
                 </tr>
                 <tr>
-                    <td>Super USB 1-7</td>
+                    <td><span title="Модель USB 1-7 появилась в продаже 24.01.2023"> USB 1-7 <sup style="background-color: white; color: rgba(238, 43, 121, 0.899); border-radius: 3px; font-style: italic;">New!</sup></span></td>
                     <td>8</td>
-                    <td>165700</td>
+                    <td>165&nbsp;700</td>
                     <!-- <td>В наличии</td> -->
                 </tr>
                 <tr>
                     <td>Super USB 1-15</td>
                     <td>16</td>
-                    <td>230000</td>
+                    <td>230&nbsp;000</td>
                     <td rowspan="6">На заказ</td>
                 </tr>
                 <tr>
@@ -100,11 +100,11 @@
                     <td rowspan="5">по запросу</td>  
                 </tr>
                 <tr>
-                    <td>Super USB 1-31 </td>
+                    <td><span title="Модель Super USB 1-31 появилась в продаже 09.10.2023"> Super USB 1-31 <sup style="background-color: white; color: rgba(238, 43, 121, 0.899); border-radius: 3px; font-style: italic;">New!</sup></span></td>
                     <td>32</td>
                 </tr>
                 <tr>
-                    <td>Super USB 1-47 </td>
+                    <td><span title="Модель Super USB 1-47 появилась в продаже 18.12.2023"> Super USB 1-47 <sup style="background-color: white; color: rgba(238, 43, 121, 0.899); border-radius: 3px; font-style: italic;">New!</sup></span></td>
                     <td>48</td>
                 </tr>
                 <tr>
