--- a/lab_2/usb.html
+++ b/lab_2/usb.html
@@ -120,7 +120,7 @@
             <h2>USB-дубликаторы для жёстких дисков</h2>
             
             <table border="1" width="100%"> 
-                <tr style="font-weight: bold;">
+                <tr style="font-weight: bold; text-align: center;">
                     <td colspan="4">
                         USB-дубликаторы Intelligent Series
                         <br><i>с поддержкой внешних жестких дисков USB!</i>
@@ -136,7 +136,7 @@
                     <td>Intelligent USB 1-9<sup>A</sup></td>
                     <td>10</td>
                     <td>205&nbsp;000</td>
-                    <td rowspan="2">В наличии</td>
+                    <td rowspan="2"><span style="background-color: rgb(252, 237, 255);">В наличии</span></td>
                 </tr>
                 <tr>
                     <td>Intelligent USB 1-19<sup>X</sup></td>
@@ -147,7 +147,7 @@
                     <td>Intelligent USB 1-29<sup>S</sup></td>
                     <td>30</td>
                     <td>370&nbsp;000</td>
-                    <td rowspan="3">В пути</td>
+                    <td rowspan="3"><span style="background-color: rgb(255, 252, 194);">В пути</span></td>
                 </tr>
                 <tr>
                     <td>Intelligent USB 1-29<sup>G</sup></td>
