--- a/lab_2/usb.html
+++ b/lab_2/usb.html
@@ -33,7 +33,9 @@
             </div>
 
             <h2>Преимущества</h2>
+            <img src="sanrio.gif" align="right" width="400" style="padding: 40px;">
             <ol>
+                
                 <li>Простое управление</li>
                 <li>Поддержка любого типа флеш носителей и USB жестких дисков</li>
                     <ul>
