--- a/lab_2/usb.html
+++ b/lab_2/usb.html
@@ -3,6 +3,21 @@
     <head>
         <meta charset="utf-8">
         <title>"Барашкова Светлана Консантиновна. Текст о дубликаторах USB"</title>
+        <style>
+            li {
+                color: palevioletred;
+                font-style: italic;
+            }
+            h2 {
+                color: rgb(195, 73, 114);
+                font-size: 20px;
+            }
+            h1 {
+                color: rgb(195, 73, 114);
+                margin: 0px;
+                font-size: 35px;
+            }
+        </style>
     </head>
 
     <body style="background-color: rgb(241, 206, 212); color: palevioletred; font-family: Arial; margin: 0px;">
@@ -32,8 +47,9 @@
                 дубликаторы для копирования внешних жестких дисков.
             </div>
 
+            <img src="sanrio.gif" align="right" width="350" style="padding: 40px;">
+
             <h2>Преимущества</h2>
-            <img src="sanrio.gif" align="right" width="400" style="padding: 40px;">
             <ol>
                 
                 <li>Простое управление</li>
@@ -99,7 +115,7 @@
                 <tr>
                     <td>Super USB 1-23 </td>
                     <td>24</td>
-                    <td rowspan="5">по запросу</td>  
+                    <td rowspan="5">По запросу</td>  
                 </tr>
                 <tr>
                     <td><span title="Модель Super USB 1-31 появилась в продаже 09.10.2023"> Super USB 1-31 <sup style="background-color: white; color: rgba(238, 43, 121, 0.899); border-radius: 3px; font-style: italic;">New!</sup></span></td>
@@ -164,7 +180,7 @@
                 <tr>
                     <td>Intelligent USB 1-59<sup>N</sup></td>
                     <td>60</td>
-                    <td rowspan="3">по запросу</td>
+                    <td rowspan="3">По запросу</td>
                     <td rowspan="3">На заказ</td>
                 </tr>
                 <tr>
