Отображение ссылок без подчеркивания

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Барашкова Светлана Консантиновна. Лабраторные работы по WEB-программированию</title>
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
     <header>
@@ -15,18 +16,18 @@
         <h1>Лабраторные работы по WEB-программированию</h1>
         <ol>
             <li>
-                <a href="lab_1/lab1.html">Лабораторная работа 1</a>
+                <a href="lab_1/lab1.html" style="text-decoration: none;">Лабораторная работа 1</a>
             </li>
             
             <li>
-                <a href="lab_2/lab2.html">Лабораторная работа 2</a>
+                <a href="lab_2/lab2.html" style="text-decoration: none;">Лабораторная работа 2</a>
             </li>
         </ol>
     </main>
 
     <footer>
         <hr>
-        &copy; Барашкова СВетлана, ФБИ-22, 2 курс, 2024
+        &copy; Барашкова Светлана, ФБИ-22, 2 курс, 2024
     </footer>
 </body>
 </html>
