Добавление ссылки на usb.html

--- a/lab_2/lab2.html
+++ b/lab_2/lab2.html
@@ -11,11 +11,13 @@
             <hr>
         </header>
         
-        <main></main>
+        <main>
+            <a href="usb.html">USB</a>
+        </main>
 
         <footer>
             <hr>
-            &copy; Барашкова СВетлана, ФБИ-22, 2 курс, 2024
+            &copy; Барашкова Светлана, ФБИ-22, 2 курс, 2024
         </footer>
     </body>
 </html>
