--- a/lab_1/discount.html
+++ b/lab_1/discount.html
@@ -6,10 +6,10 @@
     </head>
 
     <body>
-        <h1><p>Дисконт</p></h1>
+        <h1>Дисконт</h1>
 
         <p>
-        <img src="discount1.jpg" width="250" height="200">  
+            <img src="discount1.jpg" width="250" height="200">  
         </p>
 
         <p>
@@ -18,7 +18,7 @@
             <b>контекста</b>, может принимать различные решения.
         </p>
 
-        <h2><p>Дисконт на товарном рынке</p></h2>
+        <h2>Дисконт на товарном рынке</h2>
 
         <p>
             <i>Скидка</i> с объявленной прейскурантной <u><i><b>цены</b></i></u> товара или услуги, предоставляемая продавцом 
@@ -30,11 +30,11 @@
         </p>
 
         <p>
-        <img src="discount2.jpg" width="50%">
-        <img src="discount3.jpg" width="45%"s>
+            <img src="discount2.jpg" width="50%">
+            <img src="discount3.jpg" width="45%"s>
         </p>
 
-        <h2><p>Дисконт как учёт векселей</p></h2>
+        <h2>Дисконт как учёт векселей</h2>
         <p>
             Учёт <s>векселей</s>, также называемый <b>дисконтом</b>, — это покупка переводных <s>векселей</s>, казначейских <s>векселей</s> или 
             облигаций по <u><i><b>цене</b></i></u> ниже номинальной. <s>Векселя</s> и облигации погашаются в определённый момент в будущем по своей 
@@ -48,30 +48,30 @@
             ценной бумаги. Например, если облигация с номинальной стоимостью 1000 и сроком действия один год была приобретена 
             за 900, то <b>дисконт</b> по стоимости погашения соответствует <u>процентной</u> ставке: (1000-900)/900=11,1% по займу.
         </p>
-        <h2><p>Дисконт на валютном рынке</p></h2>
+        <h2>Дисконт на валютном рынке</h2>
             <p>
                 <b>Дисконтом</b> на валютном рынке называют <i>скидку</i> (вычет) с курса валюты по наличным, кассовым операциям, 
                 если предполагается,что её курс будет понижаться между датами заключения и исполнения сделки. Здесь 
                 противоположным понятием является премия — когда при сделке на срок валюта котируется дороже,чем по 
                 наличным сделкам<sup>[1]</sup>.
             </p>
-        <h2><p>Дисконт на фондовом рынке</p></h2>
+        <h2>Дисконт на фондовом рынке</h2>
             <p>
                 На фондовом рынке под <b>дисконтом</b> понимают <i>скидку</i> в <u>процентах</u> с номинальной стоимости ценной бумаги. 
                 Например, если облигацию с номиналом 1000 $ продают за 900 $, <b>дисконт</b> составляет 10%. <b>Дисконтом</b> 
                 также называют разницу между <u><i><b>ценой</b></i></u> ценной бумаги при её реализации и при погашении<sup>[1]</sup>.
             </p>
-        <h2><p>Дисконт в денежном обращении</p></h2>
+        <h2>Дисконт в денежном обращении</h2>
             <p>
                 В денежном обращении <b>дисконтом</b> называют обесценивание одних видов денег по отношению к другим, 
                 параллельно обращающимся (например, бумажных денег по отношению к золотым монетам)<sup>[1]</sup>.
             </p>
-        <h2><p>Дисконт в теории игр</p></h2>
+        <h2>Дисконт в теории игр</h2>
             <p>
                 В теории игр — текущая стоимость денежной единицы будущего периода, умноженная на вероятность 
                 повторения игры для игр с неизвестным числом повторений.
             </p>
-        <h2><p>Залоговый дисконт</p></h2>
+        <h2>Залоговый дисконт</h2>
             <p>
                 Разница между реальной рыночной стоимостью залогового имущества и его залоговой стоимостью, используемой 
                 для определения суммы выдаваемого банком кредита
