--- a/lab_1/favorites.html
+++ b/lab_1/favorites.html
@@ -6,7 +6,7 @@
     </head>
 
     <body>
-        <h1><p>"Список моих любимых продуктов"</p></h1>
+        <h1>"Список моих любимых продуктов"</h1>
         <ol type="1">
             <li>Пельмени</li>
             <li>Плов</li>
@@ -22,7 +22,7 @@
             <li>Сосиска в тесте</li>
         </ol>
 
-        <h1><p>"Список моих любимых фильмов/сериалов"</p></h1>
+        <h1>"Список моих любимых фильмов/сериалов"</h1>
         <ol type="a">
             <li>Очень странные дела</li>
             <li>В поисках Аляски</li>
@@ -38,7 +38,7 @@
             <li>На игле</li>
         </ol>
 
-        <h1><p>"Список городов, которые я бы хотела посетить"</p></h1>
+        <h1>"Список городов, которые я бы хотела посетить"</h1>
         <ol type="I">
             <li>Стокгольм</li>
             <li>Токио</li>
@@ -54,7 +54,7 @@
             <li>Осака</li>
         </ol>
 
-        <h1><p>"Список профессий, которые я считаю очень интересными"</p></h1>
+        <h1>"Список профессий, которые я считаю очень интересными"</h1>
         <ol type="A">
             <li>Графический дизайнер</li>
             <li>Тестировщик водных горок</li>
