--- a/lab_1/table.html
+++ b/lab_1/table.html
@@ -6,7 +6,7 @@
     </head>
 
     <body>
-        <h1><p>"Выплаты по кредиту на 3 месяца"</p></h1>
+        <h1><"Выплаты по кредиту на 3 месяца"</h1>
 
         <table border="1" width="100%">
             <tr>
