--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
             <li>
                 <a href="lab_2/lab2.html" style="text-decoration: none;">Лабораторная работа 2</a>
             </li>
+
+            <li>
+                <a href="lab_3/lab3.html" style="text-decoration: none;">Лабораторная работа 3</a>
+            </li>
         </ol>
     </main>
 
