--- a/lab_3/lab3.html
+++ b/lab_3/lab3.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Барашкова Светлана Константиновна. Лабораторная 3</title>
-    <link rel="stylesheet" href="../main.css"
-</head>
-<body>
-    <header>
-        НГТУ, ФБ, Лабораторная работа 3
-    </header>
+<html lang="ru">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Барашкова Светлана Константиновна. Лабораторная 3</title>
+        <link rel="stylesheet" href="../main.css">
+    </head>
 
-    <main></main>
+    <body>
+        <header>
+            НГТУ, ФБ, Лабораторная работа 3
+        </header>
 
-    <footer>
-        &copy; Барашкова Светлана, ФБИ-22, 2 курс, 2024
-    </footer>
-</body>
+        <main>
+            <a href="gone.html" style="text-decoration: none;">Унесенные ветром</a>
+        </main>
+
+        <footer>
+            &copy; Барашкова Светлана, ФБИ-22, 2 курс, 2024
+        </footer>
+    </body>
 </html>
