--- a/lab_3/lab3.html
+++ b/lab_3/lab3.html
@@ -14,6 +14,7 @@
 
         <main>
             <a href="gone.html" style="text-decoration: none;">Унесенные ветром</a>
+            <a href="text.html" style="text-decoration: none;">Оформление текста</a>
         </main>
 
         <footer>
