--- a/lab_3/gone.html
+++ b/lab_3/gone.html
@@ -28,17 +28,16 @@
                 text-align: right;
                 text-shadow: 4px 3px 3px rgba(217, 77, 124, 0.5);
             }
-
-
         </style>
     </head>
+
     <body>
         <header>
             НГТУ, ФБ, Лабораторная работа 3
         </header>
 
         <main>
-            <h1 style="text-align: center;">Часть первая</h1>
+            <h1>Часть первая</h1>
             <h2>Глава 1</h2>
 
             <p>
