Добавление ссылки на citations.html

--- a/lab_3/lab3.html
+++ b/lab_3/lab3.html
@@ -15,6 +15,7 @@
         <main>
             <a href="gone.html" style="text-decoration: none;">Унесенные ветром</a>
             <a href="text.html" style="text-decoration: none;">Оформление текста</a>
+            <a href="citations.html" style="text-decoration: none;">citations.html</a>
         </main>
 
         <footer>
