--- a/lab_3/citations.html
+++ b/lab_3/citations.html
@@ -15,6 +15,60 @@
                 background: linear-gradient(to right top, rgb(255, 159, 199), rgb(248, 220, 236), white);
             }
 
+            .citation1 {
+                border: 1px solid papayawhip;
+                padding: 20px;
+                border-radius: 10px;
+                margin: 20px;
+                box-shadow: 10px 10px 5px #0002;
+                background: linear-gradient(to right top, rgb(238, 113, 165), rgb(255, 180, 223), rgb(228, 159, 159));
+            }
+
+            .citation2 {
+                border: 1px solid papayawhip;
+                padding: 20px;
+                border-radius: 10px;
+                margin: 20px;
+                box-shadow: 0px 10px 5px 10px rgba(255, 248, 57, 0.542);
+                background: linear-gradient(to left top, rgb(45, 120, 65), rgb(125, 232, 125), rgb(215, 250, 220));
+            }
+
+            .citation3 {
+                border: 1px solid rgb(239, 161, 35);
+                padding: 20px;
+                border-radius: 20px;
+                margin: 20px;
+                box-shadow: 0px 10px 5px 10px rgba(107, 107, 83, 0.542);
+                background: linear-gradient(to left top, rgb(239, 246, 46), rgb(255, 239, 132), rgb(255, 255, 255));
+            }
+
+            .citation4 {
+                border: 1px solid rgb(35, 239, 38);
+                padding: 10px;
+                border-radius: 30px;
+                margin: 20px;
+                box-shadow: 0px 10px 5px 10px rgba(19, 19, 12, 0.542);
+                background: linear-gradient(rgb(46, 246, 219), rgb(86, 183, 173), rgb(255, 255, 255));
+            }
+
+            .citation5 {
+                border: 5px solid rgb(79, 35, 239);
+                padding: 10px;
+                border-radius: 1px;
+                margin: 20px;
+                box-shadow: 0px 10px 5px 10px rgba(243, 243, 46, 0.542);
+                background: linear-gradient(to right top, rgb(46, 163, 246), rgb(178, 208, 255), rgb(255, 255, 255));
+            }
+
+            .citation6 {
+                border: 3px solid rgb(92, 51, 7);
+                padding: 10px;
+                border-radius: 35px;
+                margin: 20px;
+                box-shadow: 0px 10px 5px 10px rgba(0, 0, 0, 0.542);
+                background: linear-gradient(rgb(246, 129, 46), rgb(248, 181, 99), rgb(255, 255, 255));
+            }
+            
             .text {
                 font-size: 30px;
                 font-weight: bold;
@@ -45,6 +99,86 @@
                 </div>
             </div>
 
+            <div class="citation1">
+                <div class="text">
+                    Что разум человека может постигнуть и во что он может поверить, того он способен достичь
+                </div>
+                <div class="author">
+                    Наполеон Хилл, журналист и писатель
+                </div>
+            </div>
+
+            <div class="citation2">
+                <div class="text">
+                    Надо любить жизнь больше, чем смысл жизни.
+                </div>
+                <div class="author">
+                    Федор Достоевский
+                </div>
+            </div>
+
+            <div class="citation3">
+                <div class="text">
+                    Начинать всегда стоит с того, что сеет сомнения.
+                </div>
+                <div class="author">
+                    Борис Стругацкий
+                </div>
+            </div>
+
+            <div class="citation4">
+                <div class="text">
+                    Неосмысленная жизнь не стоит того, чтобы жить.
+                </div>
+                <div class="author">
+                    Сократ
+                </div>
+            </div>
+
+            <div class="citation5">
+                <div class="text">
+                    Ваше время ограничено, не тратьте его, живя чужой жизнью
+                </div>
+                <div class="author">
+                    Стив Джобс
+                </div>
+            </div>
+
+            <div class="citation6">
+                <div class="text">
+                    Наука — это организованные знания, мудрость — это организованная жизнь.
+                </div>
+                <div class="author">
+                    Иммануил Кант
+                </div>
+            </div>
+
+            <div class="citation">
+                <div class="text">
+                    В моем словаре нет слова «невозможно».
+                </div>
+                <div class="author">
+                    Наполеон Бонапарт
+                </div>
+            </div>
+
+            <div class="citation3">
+                <div class="text">
+                    Вы никогда не пересечете океан, если не наберетесь мужества потерять берег из виду.
+                </div>
+                <div class="author">
+                    Христофор Колумб
+                </div>
+            </div>
+
+            <div class="citation5">
+                <div class="text">
+                    Стоит только поверить, что вы можете – и вы уже на полпути к цели.
+                </div>
+                <div class="author">
+                    Теодор Рузвельт
+                </div>
+            </div>
         </main>
 
         <footer>
