--- a/lab_3/text.html
+++ b/lab_3/text.html
@@ -68,7 +68,7 @@
         </header>
 
         <main>
-            <img src="https://i.pinimg.com/originals/0b/5a/3d/0b5a3d9cb21d267494d0f05ef435a670.gif" align="left" width="450" height="450">
+            <img src="gif.webp" align="left" width="450" height="450">
             <h1>Sally Face</h1>
             <p class="text">
                 <cite>"Мы должны смотреть за пределы жизненных тяжб. В самую суть всех вещей. В этом наше спасение."</cite>
