Исправление ошибки ссылки

--- a/lab_2/lab2.html
+++ b/lab_2/lab2.html
@@ -13,7 +13,7 @@
         </header>
         
         <main>
-            <a href="usb.html">USB</a>
+            <a href="usb.html" style="text-decoration: none;">USB</a>
         </main>
 
         <footer>
