Исправление ошибки в тексте

--- a/lab_3/text.html
+++ b/lab_3/text.html
@@ -110,7 +110,7 @@
             </p>
 
             <p>
-                <b>Эшли Кэмпбелл</b> &mdash Подруга Сала, Ларри и Тодда. Катается на мотоцикле.
+                <b>Эшли Кэмпбелл</b> &mdash; Подруга Сала, Ларри и Тодда. Катается на мотоцикле.
             </p>
 
             <h2>Интересные арты</h2>
