--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Барашкова Светлана Консантиновна. Лабраторные работы по WEB-программированию</title>
     <link rel="stylesheet" href="main.css">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="C:\Sveta-Barashkova\front-labs\lab_4\favicon.ico" type="image/x-icon">
     <link rel="icon" href="C:\Sveta-Barashkova\front-labs\lab_4\favicon-16x16.png">
     <link rel="icon" href="C:\Sveta-Barashkova\front-labs\lab_4\favicon-32x32.png">
 </head>
