Заготовка к 4-ой лаюораторной

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </header>
 
     <main>
-        <h1>Лабраторные работы по WEB-программированию</h1>
+        <h1>Лабораторные работы по WEB-программированию</h1>
         <ol>
             <li>
                 <a href="lab_1/lab1.html" style="text-decoration: none;">Лабораторная работа 1</a>
