Добавление ссылки на position

--- a/lab_4/lab4.html
+++ b/lab_4/lab4.html
@@ -15,7 +15,9 @@
     </header>
 
     <main>
-
+        <a href="book.html" style="text-decoration: none;">Book</a>
+        <a href="display.html" style="text-decoration: none;">Display</a>
+        <a href="position.html" style="text-decoration: none;">Position</a>
     </main>
 
     <footer>
