--- a/lab_4/lab4.html
+++ b/lab_4/lab4.html
@@ -18,6 +18,7 @@
         <a href="book.html" style="text-decoration: none;">Book</a>
         <a href="display.html" style="text-decoration: none;">Display</a>
         <a href="position.html" style="text-decoration: none;">Position</a>
+        <a href="comics.html" style="text-decoration: none;">Comics</a>
     </main>
 
     <footer>
