Добавление сслыки на карточки

--- a/lab_4/lab4.html
+++ b/lab_4/lab4.html
@@ -15,10 +15,27 @@
     </header>
 
     <main>
-        <a href="book.html" style="text-decoration: none;">Book</a>
-        <a href="display.html" style="text-decoration: none;">Display</a>
-        <a href="position.html" style="text-decoration: none;">Position</a>
-        <a href="comics.html" style="text-decoration: none;">Comics</a>
+        <ol>
+            <li>
+                <a href="book.html" style="text-decoration: none;">Book</a>
+            </li>
+
+            <li>
+                <a href="display.html" style="text-decoration: none;">Display</a>
+            </li>
+
+            <li>
+                <a href="position.html" style="text-decoration: none;">Position</a>
+            </li>
+
+            <li>
+                <a href="comics.html" style="text-decoration: none;">Comics</a>
+            </li>
+
+            <li>
+                <a href="cards.html" style="text-decoration: none;">Cards</a>
+            </li>
+        </ol>
     </main>
 
     <footer>
