--- a/lab_5/arithmetic.html
+++ b/lab_5/arithmetic.html
@@ -20,6 +20,13 @@
             let author = 'Автор страницы:\nБарашкова Светлана Константиновна'
             alert(author);
         }
+        function changeOutput(buttonNum, backColor, textColor, borderColor) {
+            let output = document.getElementById('output');
+            output.innerHTML = 'Нажата кнопка ' + buttonNum;
+            output.style.backgroundColor = backColor;
+            output.style.color = textColor;
+            output.style.borderColor = borderColor;
+        }
     </script>
     <style>
         .message{
@@ -33,6 +40,11 @@
             width: 300px;
             background-color: aliceblue;
         }
+        #output {
+            border: 10px solid;
+            width: 300px;
+            height: 40px;
+        }
     </style>
 </head>
 <body>
@@ -44,6 +56,15 @@
         <label>Второе число: <input type="number" value="7891" id="numberB"></label><br>
         <div class="message" onclick="showSum()">Найти сумму чисел</div>
         <div class="message" onclick="showAuthor()">Узнать, кто автор викторины</div>
+
+        <div>
+            <input type="button" value="Кнопка 1" onclick="changeOutput(1, 'red', 'yellow', 'green')">
+            <input type="button" value="Кнопка 2" onclick="changeOutput(2, 'lime', 'blue', 'red')">
+            <input type="button" value="Кнопка 3" onclick="changeOutput(3, 'white', 'pink', 'black')">
+            <input type="button" value="Кнопка 4" onclick="changeOutput(4, 'orange', 'black', 'lime')">
+        </div>
+
+        <div id="output"></div>
     </main>
 
     <footer>
