--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
                 <li>
                     <a href="lab_4/lab4.html" style="text-decoration: none;">Лабораторная работа 4</a>
                 </li>
+
+                <li>
+                    <a href="lab_5/lab5.html" style="text-decoration: none;">Лабораторная работа 5</a>
+                </li>
             </ol>
         </div>
     </main>
