Добавление ссылки на arithmetic

--- a/lab_5/lab5.html
+++ b/lab_5/lab5.html
@@ -13,7 +13,11 @@
     </header>
 
     <main>
-
+        <ol>
+            <li>
+                <a href="arithmetic.html">Вывод суммы</a>
+            </li>
+        </ol>
     </main>
 
     <footer>
