--- a/lab_5/lab5.html
+++ b/lab_5/lab5.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="../lab_4/favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <header>
+    ""<header>
         НГТУ, ФБ, Лабораторная работа 
     </header>
 
@@ -16,6 +16,15 @@
         <ol>
             <li>
                 <a href="arithmetic.html">Вывод суммы</a>
+            </li>
+            <li>
+                <a href="cart.html">Корзина продуктов</a>
+            </li>
+            <li>
+                <a href="circle.html">Круги</a>
+            </li>
+            <li>
+                <a href="">Фильтр</a>
             </li>
         </ol>
     </main>
