--- a/lab_5/lab5.html
+++ b/lab_5/lab5.html
@@ -24,7 +24,7 @@
                 <a href="circle.html">Круги</a>
             </li>
             <li>
-                <a href="">Фильтр</a>
+                <a href="filter.html">Фильтр</a>
             </li>
         </ol>
     </main>
