--- a/lab_5/filter.html
+++ b/lab_5/filter.html
@@ -2,8 +2,7 @@
 <html lang="ru">
     <head>
         <meta charset="UTF-8">
-        <title>Санданова Виктория Болотовна.Фильтры</title>
-        <link rel="stylesheet" href="../main.css">
+        <title>Барашкова Светлана Консантиновна. Лабораторная 5</title>
         <link rel="stylesheet" href="../main.css">
         <link rel="icon" href="../lab_4/favicon.ico" type="image/x-icon">
         <script>
@@ -30,7 +29,7 @@
         </main>
 
         <footer>
-            &copy; Санданова Виктория, ФБИ-22, 2 курс, 2024
+            &copy; Барашкова Светлана, ФБИ-22, 2 курс, 2024
         </footer>
     </body>
 </html>
