--- a/lab_5/circle.html
+++ b/lab_5/circle.html
@@ -65,7 +65,7 @@
         </script>
     </main>
     <footer>
-        &copy; Санданова Виктория, ФБИ-22, 2 курс, 2024
+        &copy; Барашкова Светлана, ФБИ-22, 2 курс, 2024
     </footer>
 </body>
 </html>
