--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
                 <li>
                     <a href="lab_5/lab5.html" style="text-decoration: none;">Лабораторная работа 5</a>
                 </li>
+
+                <li>
+                    <a href="lab_6/lab6.html" style="text-decoration: none;">Лабораторная работа 6</a>
+                </li>
             </ol>
         </div>
     </main>
