--- a/lab_6/lab6.html
+++ b/lab_6/lab6.html
@@ -13,7 +13,14 @@
     </header>
 
     <main>
-
+        <ol>
+            <li>
+                <a href="random.html" style="text-decoration: none;">Угадай число</a>
+            </li>
+            <li>
+                <a href="color.html" style="text-decoration: none;">Перебор цветов</a>
+            </li>
+        </ol>
     </main>
 
     <footer>
