--- a/lab_6/random.html
+++ b/lab_6/random.html
@@ -122,11 +122,11 @@
             <div id="rulesBlock" style="display: none;">
                 <h3>Правила игры:</h3>
                 <ol>
-                    <li>Первое правило.</li> 
-                    <li>Второе правило.</li>
-                    <li>Третье правило.</li>
-                    <li>Четвертое правило.</li>
-                    <li>Пятое правило.</li>
+                    <li>Сначала нажмите кнопку "сыграть в игру"</li> 
+                    <li>Введите число</li>
+                    <li>Нажмите на кнопку угадать</li>
+                    <li>Число должно быть от 1 до 100</li>
+                    <li>Если хотите сыграть еще раз, то нажмите на кнопку Сыграть еще раз</li>
                 </ol>
             </div>
         </div>
