--- a/lab_6/lab6.html
+++ b/lab_6/lab6.html
@@ -20,6 +20,9 @@
             <li>
                 <a href="color.html" style="text-decoration: none;">Перебор цветов</a>
             </li>
+            <li>
+                <a href="filter.html" style="text-decoration: none;">Фильтр товаров</a>
+            </li>
         </ol>
     </main>
 
