добавление ссылки на cart

--- a/lab_6/lab6.html
+++ b/lab_6/lab6.html
@@ -23,6 +23,9 @@
             <li>
                 <a href="filter.html" style="text-decoration: none;">Фильтр товаров</a>
             </li>
+            <li>
+                <a href="cart.html" style="text-decoration: none;">Фильтр товаров</a>
+            </li>
         </ol>
     </main>
 
