--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
                 <li>
                     <a href="lab_6/lab6.html" style="text-decoration: none;">Лабораторная работа 6</a>
                 </li>
+
+                <li>
+                    <a href="lab_7/lab7.html" style="text-decoration: none;">Лабораторная работа 7</a>
+                </li>
             </ol>
         </div>
     </main>
