добавление ссылки на books

--- a/lab_7/lab7.html
+++ b/lab_7/lab7.html
@@ -13,7 +13,9 @@
     </header>
 
     <main>
-
+        <li>
+            <a href="books.html" style="text-decoration: none;">Добавление блоков</a>
+        </li>
     </main>
 
     <footer>
