--- a/lab_7/books.html
+++ b/lab_7/books.html
@@ -111,7 +111,7 @@
         <button onclick="addColorfulCircles()">Цветные круги</button>
     </main>
     <footer>
-        &copy; Барашкова Светлана ФБИ-22, 2 курс, 2024
+        &copy; Барашкова Светлана, 2 курс, 2024
     </footer>
 </body>
 </html>
