--- a/lab_7/lab7.html
+++ b/lab_7/lab7.html
@@ -16,6 +16,9 @@
         <li>
             <a href="books.html" style="text-decoration: none;">Добавление блоков</a>
         </li>
+        <li>
+            <a href="dollar.html" style="text-decoration: none;">Курс доллара</a>
+        </li>
     </main>
 
     <footer>
