--- a/lab_7/lab7.html
+++ b/lab_7/lab7.html
@@ -19,6 +19,12 @@
         <li>
             <a href="dollar.html" style="text-decoration: none;">Курс доллара</a>
         </li>
+        <li>
+            <a href="cotirovki.html" style="text-decoration: none;">Котировки</a>
+        </li>
+        <li>
+            <a href="euru.html" style="text-decoration: none;">Курс евро и погода</a>
+        </li>
     </main>
 
     <footer>
