добавление ссылки на 8 лабу

--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
                 <li>
                     <a href="lab_7/lab7.html" style="text-decoration: none;">Лабораторная работа 7</a>
                 </li>
+
+                <li>
+                    <a href="lab_8/lab8.html" style="text-decoration: none;">Лабораторная работа 8</a>
+                </li>
             </ol>
         </div>
     </main>
