--- a/lab_8/date.html
+++ b/lab_8/date.html
@@ -45,6 +45,11 @@
                 <td><div id="current-dateEG"></div></td>
             </tr>
         </table>
+
+        <div id="year"></div>
+        <div id="month"></div>
+        <div id="date"></div>
+        <div id="day"></div>
     </main>
 
     <footer>
