--- a/lab_8/date.html
+++ b/lab_8/date.html
@@ -50,6 +50,16 @@
         <div id="month"></div>
         <div id="date"></div>
         <div id="day"></div>
+
+        <h1>Определение дня недели</h1>
+        <label for="inputDate">Дата:</label>
+        <input type="number" id="inputDate" min="1" max="31">
+        <label for="inputMonth">Месяц (числом):</label>
+        <input type="number" id="inputMonth" min="1" max="12">
+        <label for="inputYear">Год:</label>
+        <input type="number" id="inputYear" min="1900" max="2100">
+        <button id="calculateBtn">День недели</button>
+        <p id="output"></p>
     </main>
 
     <footer>
