добавление ссылки на getdayscount

--- a/lab_8/lab8.html
+++ b/lab_8/lab8.html
@@ -13,7 +13,13 @@
     </header>
 
     <main>
-        
+        <li>
+            <a href="date.html" style="text-decoration: none;">Дата</a>
+        </li>
+
+        <li>
+            <a href="get-days-count.html" style="text-decoration: none;">Дата</a>
+        </li>
     </main>
 
     <footer>
