добавление ссылки на timehtml

--- a/lab_8/lab8.html
+++ b/lab_8/lab8.html
@@ -20,6 +20,10 @@
         <li>
             <a href="get-days-count.html" style="text-decoration: none;">Дата</a>
         </li>
+
+        <li>
+            <a href="time.html" style="text-decoration: none;">Дата</a>
+        </li>
     </main>
 
     <footer>
