--- a/lab_8/lab8.html
+++ b/lab_8/lab8.html
@@ -18,11 +18,11 @@
         </li>
 
         <li>
-            <a href="get-days-count.html" style="text-decoration: none;">Дата</a>
+            <a href="get-days-count.html" style="text-decoration: none;">Число дней с даты рождения</a>
         </li>
 
         <li>
-            <a href="time.html" style="text-decoration: none;">Дата</a>
+            <a href="time.html" style="text-decoration: none;">Число дней с даты рождения</a>
         </li>
     </main>
 
