--- a/lab_8/lab8.html
+++ b/lab_8/lab8.html
@@ -22,7 +22,11 @@
         </li>
 
         <li>
-            <a href="time.html" style="text-decoration: none;">Число дней с даты рождения</a>
+            <a href="time.html" style="text-decoration: none;">Время</a>
+        </li>
+
+        <li>
+            <a href="clock.html" style="text-decoration: none;">Аналоговые часы</a>
         </li>
     </main>
 
