--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
                 <li>
                     <a href="lab_8/lab8.html" style="text-decoration: none;">Лабораторная работа 8</a>
                 </li>
+
+                <li>
+                    <a href="rgr/news.html" style="text-decoration: none;">РГЗ</a>
+                </li>
             </ol>
         </div>
     </main>
