--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 </li>
 
                 <li>
-                    <a href="rgr/news.html" style="text-decoration: none;">РГЗ</a>
+                    <a href="rgz/news.html" style="text-decoration: none;">РГЗ</a>
                 </li>
             </ol>
         </div>
