--- a/lab_5/filter.html
+++ b/lab_5/filter.html
@@ -68,7 +68,7 @@
         </header>
         
         <main>
-            <div><img src="C:\Sveta-Barashkova\front-labs\lab_5\monk.jpeg" id="blurImage"></div>
+            <div><img src="monk.jpeg" id="blurImage"></div>
             Фильтр blur:
             <div class="filter"><input type="range" min="0" max="20" value="0" onchange="blurChange()" id="blurValue">
                 <span id="blurOutput"></span></div>
